--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="menu_home">Главная</string>
-    <string name="menu_gallery">Графики и статистика</string>
-    <string name="menu_slideshow">Настройки</string>
+    <string name="menu_categories">Категории</string>
+    <string name="menu_statistics">Графики и статистика</string>
+    <string name="menu_settings">Настройки</string>
 
     <string name="title_activity_main">Smart Cash</string>
 </resources>
